--- a/src/app/admin/edit-framework/edit-framework.component.html
+++ b/src/app/admin/edit-framework/edit-framework.component.html
@@ -29,7 +29,7 @@
   </div>
 
   <div mat-dialog-actions class="actions" align="end">
-    <button mat-button (click)="onNoClick()">Abbrechen</button>
+    <button mat-button color="warn" (click)="onNoClick()">Abbrechen</button>
     <button mat-button cdkFocusInitial (click)="saveFramework()">Speichern</button>
   </div>
 
