--- a/src/app/admin/edit-dialog/edit-dialog.component.html
+++ b/src/app/admin/edit-dialog/edit-dialog.component.html
@@ -31,7 +31,7 @@
       </div>
 
       <div mat-dialog-actions class="actions" align="end">
-        <button mat-button (click)="onNoClick()">Abbrechen</button>
+        <button mat-button color="warn" (click)="onNoClick()">Abbrechen</button>
         <button mat-button cdkFocusInitial (click)="saveQuestion()">Speichern</button>
       </div>
     </div>
