--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -11,6 +11,10 @@
     <mat-icon aria-hidden="false" aria-label="assignment icon">history</mat-icon>
     <span>Verlauf</span>
   </a>
+  <a mat-stroked-button routerLink="/feedback" routerLinkActive="active-link">
+    <mat-icon aria-hidden="false" aria-label="assignment icon">record_voice_over</mat-icon>
+    <span>Feedback</span>
+  </a>
   <a *ngIf="isAdmin" mat-stroked-button routerLink="/admin" routerLinkActive="active-link">
     <mat-icon aria-hidden="false" aria-label="assignment icon">admin_panel_settings</mat-icon>
     <span>Admin-Interface</span>
