--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar">
   <mat-toolbar-row>
-    <div class="logo">
+    <div class="logo" routerLink="/">
       <img src="../../assets/img/svg/frontway.svg" alt="logo" />
       <span>Front</span>
       <span>Select</span>
