Bug fix: next-question-click crashed result + some style improvements

--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -14,7 +14,7 @@
 
       <mat-form-field class="textarea">
           <mat-label>Schreiben Sie ein Kommentar</mat-label>
-          <textarea matInput [(ngModel)]="text" placeholder="Es hat mir gut gefallen, dass..."></textarea>
+          <textarea matInput [(ngModel)]="text" placeholder="Es gefällt mir gut, dass..."></textarea>
       </mat-form-field>
 
 
