--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -5,7 +5,7 @@
   </a>
   <a mat-stroked-button routerLink="/model" routerLinkActive="active-link">
     <mat-icon aria-hidden="false" aria-label="assignment icon">psychology</mat-icon>
-    <span>Berechnungs-Formel</span>
+    <span>Formel</span>
   </a>
   <a mat-stroked-button routerLink="/history" routerLinkActive="active-link">
     <mat-icon aria-hidden="false" aria-label="assignment icon">history</mat-icon>
@@ -17,6 +17,6 @@
   </a>
   <a *ngIf="isAdmin" mat-stroked-button routerLink="/admin" routerLinkActive="active-link">
     <mat-icon aria-hidden="false" aria-label="assignment icon">admin_panel_settings</mat-icon>
-    <span>Admin-Interface</span>
+    <span>Admin</span>
   </a>
 </nav>
