--- a/src/app/survey/survey/question-container/question-container.component.scss
+++ b/src/app/survey/survey/question-container/question-container.component.scss
@@ -5,7 +5,7 @@
   mat-card {
     padding: $spacer*4;
     width: 804px;
-    height: 600px;
+    height: 650px;
 
     display: flex;
     flex-direction: column;
@@ -13,10 +13,16 @@
 
     mat-card-header {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
 
       padding: 0 $spacer;
+
+      span.category {
+        font-size: 14px;
+        color: $color-grey-light;
+      }
 
       div {
 
@@ -52,6 +58,11 @@
 
           span {
             padding-top: 3px;
+
+            &:nth-child(2) {
+              font-size: 64px;
+              font-weight: bold;
+            }
           }
 
           button {
@@ -67,7 +78,9 @@
 
     mat-card-content {
       padding: $spacer;
+      padding-top: 0;
       line-height: 1.6;
+      margin: 0;
 
       span {
         color: $color-grey-light;
@@ -76,7 +89,8 @@
       p {
 
         &.questionText {
-          padding: $spacer*4 0;
+          padding: $spacer*2 0;
+          padding-top: $spacer;
           font-size: 2em;
           font-weight: bold;
         }
@@ -118,6 +132,14 @@
           font-size: 0.7em;
           line-height: 16px;
 
+          &.infoButton {
+            margin: 0;
+            padding: 0;
+            line-height: normal;
+            color: $color-grey-light;
+            margin-left: $spacer*2;
+          }
+
           &.rated {
             &-0 {
               background-color: $color-grey-light;
@@ -136,6 +158,10 @@
             }
             &-8 {
               background-color: $color-lightGreen;
+            }
+            &-21 {
+              background-color: $color-primary;
+              color: white;
             }
           }
         }
